--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "game of life",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server",
-    "test": "karma start karma.conf.js"
+    "build": "./node_modules/.bin/webpack",
+    "dev": "./node_modules/.bin/webpack-dev-server",
+    "test": "./node_modules/.bin/karma start karma.conf.js"
   },
   "keywords": [
     "game",
@@ -22,6 +22,7 @@
     "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
+    "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
@@ -37,6 +38,7 @@
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
