--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "babel-preset-es2015": "^6.18.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "html-webpack-plugin": "^2.24.1",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
