--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2017": "^6.16.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
